--- a/Zadania/3. CSS Selektory/styles.css
+++ b/Zadania/3. CSS Selektory/styles.css
@@ -3,13 +3,22 @@
     atrybuty do wykorzystania:
         font-family: "Arial Narrow";
 */
+p {
+    font-family: "Arial Narrow";
+}
 
+i {
+    font-family: "Arial Narrow";
+}
 
 /*
     Dla nagłówka h1 o id header ustaw kolor czcionki na czerwony
     atrybuty do wykorzystania:
         color: red;
 */
+#header {
+    color: red;
+}
 
 
 /*
@@ -19,6 +28,10 @@
         background-color: grey;
 
 */
+.container {
+    height: 300px;
+    background-color: gray;
+}
 
 
 /*
@@ -26,6 +39,10 @@
     atrybuty do wykorzystania:
         color: white;
 */
+.container p {
+    color: white;
+}
+
 
 
 /*
@@ -33,6 +50,9 @@
     atrybuty do wykorzystania:
         font-size: 1.5em;
 */
+.container > p {
+    font-size: 1.5em;
+}
 
 
 /*
@@ -41,20 +61,29 @@
     background-color: #131326;
     color: white;
 */
-
+.listHeader {
+    background-color: #131326;
+    color: white;
+}
 
 /*
     Dla wszystkich sąsiadów elementu o klasie listHeader ustaw kolor tła
     atrybuty do wykorzystania:
     background-color: #FBFBFB;
 */
-
+.listHeader ~ div {
+    background-color: FBFBFB;
+}
 
 /*
     Dla pierwszego sąsiada elementu o klasie listHeader ustaw kolor tła
     atrybuty do wykorzystania:
     background-color: aquamarine;
 */
+.listHeader + div {
+   background-color: aquamarine;
+}
+
 
 
 
